<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Learn Piano</string>
    <string name="learn_piano">Learn Piano</string>
    <string name="language">Languages</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="guitar">Guitar</string>
    <string name="saxophone">Saxophone</string>
    <string name="tite_splash">This action can contain ads</string>
    <string name="next">Next</string>
    <string name="start">Get Started</string>
    <string name="setting">Setting</string>
    <string name="show_note">Show note</string>
    <string name="volume">Volume</string>
    <string name="piano">Piano</string>
    <string name="storage">Storage</string>
    <string name="notification_access">Notification access</string>
    <string name="permission">Permission</string>
    <string name="go">Go</string>
    <string name="string_allow_translate">Learn Piano requires permission to use the devices\'s storage and record file audio</string>
    <string name="record_file_audio">Record file audio</string>
    <string name="noti_need_permission">You need enable permission</string>
    <string name="go_to_setting">go to setting</string>
    <string name="record">Record</string>
    <string name="play_list">Playlist</string>
    <string name="str_permission_message_denied">You need to grant all permission</string>

    <string name="save">Save</string>
    <string name="speed">Speed</string>
    <string name="file_name">File name</string>
    <string name="title_save_record">Would you like to save your recording?</string>
    <string name="hint_save_record">Ex: Recording 1</string>
    <string name="recording_saved">Recording saved!</string>
    <string name="loading_piano">Loading piano…</string>
    <string name="message_must_not_be_null">This field cannot be left blank!</string>
    <string name="todo">TODO</string>
    <string name="delete">Delete</string>
    <string name="message_this_is_sample">This is sample</string>
    <string name="share_to">Share to</string>
    <string name="thank_for_your_feedback">Thank for your feedback.</string>
    <string name="please_feedback">Please feedback</string>
    <string name="home">Home</string>
    <string name="policy">Policy</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="version">Version</string>
    <string name="do_you_like_learn_piano">Do you like Learn Piano?</string>
    <string name="content_rate">Give us a quick rating so we know if you like it?</string>
    <string name="rate_us">Rate Us</string>
    <string name="no_later">No Later</string>
    <string name="title_intro_1">Realistic Piano Experience</string>
    <string name="content_intro_1">Immerse yourself in the authentic sound and feel of a grand piano</string>
    <string name="title_intro_2">Virtual Instruments</string>
    <string name="content_intro_2">Experience the joy of playing without the need for physical instruments.</string>
    <string name="title_intro_3">Realistic Sound Quality</string>
    <string name="content_intro_3">The app boasts realistic instrument sounds, providing an authentic playing experience</string>
    <string name="edit_name">Edit name?</string>
    <string name="close">Close</string>
    <string name="delete_record">Delete record?</string>
    <string name="content_delete_record">Do you want to delete these record? This process cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="explore_the_piano_s_enchanting_world">Explore the piano\'s enchanting world</string>
    <string name="drum_set">Drum set</string>
    <string name="string_allow_translate_1">Learn Piano requires permission to use the notification access and record file audio</string>
    <string name="no_record_in_here">No record in here</string>
    <string name="thank_you">Thanh you!</string>
    <string name="ok">OK</string>
    <string name="double_key">2 keys</string>
    <string name="double_player">2 players</string>
    <string name="style_piano">Style Piano</string>
    <string name="my_tracks">My Tracks</string>

    <string name="drum">Drum</string>
    <string name="how_to_use">How to use</string>
    <string name="others">Others</string>
    <string name="press_the_guitar_string_to_start_you_can_choose_chords_when_you_play_guitar">Press the guitar string to start. You can choose chords when you play guitar.</string>
    <string name="tap_drum_or_drum_plates_to_start_you_can_record_videos_and_change_themes">Tap drum or drum plates to start. You can record videos and change themes.</string>
    <string name="press_the_button_on_saxophone_to_start_you_can_record_videos_and_change_themes">"Press the button on saxophone to start. You can record videos and change themes. "</string>

    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="your_feedback_is_very">Your feedback is very helpful to us!</string>
</resources>