<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_313sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_save_record"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingBottom="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:ellipsize="end"
            android:fontFamily="@font/sf_compact_medium"
            android:maxLines="2"
            android:text="@string/title_save_record"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textFontWeight="656"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_name_record"
            android:layout_width="0dp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:background="@drawable/custom_edt"
            android:fontFamily="@font/sf_compact_medium"
            android:hint="@string/hint_save_record"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="#9D9D9D"
            android:textFontWeight="457"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_27sdp"
            android:background="@drawable/custom_bg_btn_close"
            android:fontFamily="@font/sf_compact_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textFontWeight="656"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tv_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_name_record" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:background="@drawable/custom_bg_btn_rate"
            android:fontFamily="@font/sf_compact_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/save"
            android:textColor="#5D3808"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_close"
            app:layout_constraintTop_toTopOf="@id/tv_close" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
