<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_281sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_24sdp"
    app:cardCornerRadius="@dimen/_12sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_dialog"
        android:paddingTop="@dimen/_24sdp"
        android:paddingBottom="@dimen/_32sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_compact_medium"
            android:text="@string/edit_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputFileName"
            android:layout_width="0dp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:background="@drawable/custom_edt"
            android:fontFamily="@font/sf_compact_medium"
            android:hint="@string/file_name"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_27sdp"
            app:layout_constraintEnd_toEndOf="@+id/inputFileName"
            app:layout_constraintStart_toStartOf="@+id/inputFileName"
            app:layout_constraintTop_toBottomOf="@+id/inputFileName">

            <TextView
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_weight="1"
                android:background="@drawable/custom_bg_btn_close"
                android:fontFamily="@font/sf_compact_medium"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/close"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/btnSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_bg_btn_rate"
                android:fontFamily="@font/sf_compact_medium"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="#5D3808"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnClose"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>