<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_24sdp"
    app:cardCornerRadius="@dimen/_12sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_dialog"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingTop="@dimen/_24sdp"
        android:paddingBottom="@dimen/_32sdp">

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sf_compact_medium"
            android:text="@string/delete_record"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/ivDelete"
            app:layout_constraintStart_toStartOf="@+id/ivDelete"
            app:layout_constraintTop_toBottomOf="@+id/ivDelete" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sf_compact_medium"
            android:maxLines="2"
            android:text="@string/content_delete_record"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/ivDelete"
            app:layout_constraintStart_toStartOf="@+id/ivDelete"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="@+id/tvContent"
            app:layout_constraintStart_toStartOf="@+id/tvContent"
            app:layout_constraintTop_toBottomOf="@+id/tvContent">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_weight="1"
                android:background="@drawable/custom_bg_btn_close"
                android:fontFamily="@font/sf_compact_medium"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/btnDelete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_bg_btn_delete"
                android:fontFamily="@font/sf_compact_medium"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnCancel"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>