<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loRate"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:elevation="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_rate_5" />

        <androidx.cardview.widget.CardView
            android:id="@+id/creenRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_38sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgIcon">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_dialog_rating"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:maxLines="2"
                    android:paddingHorizontal="5dp"
                    android:text="@string/do_you_like_learn_piano"
                    android:textAlignment="center"
                    android:textColor="@color/color_201A25"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/nunito_medium"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/content_rate"
                    android:textAlignment="center"
                    android:textColor="@color/color_5C5C5C"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <RatingBar
                    android:id="@+id/rtb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:numStars="5"
                    android:progressBackgroundTint="#FFFFFF"
                    android:progressDrawable="@drawable/progress_rating"
                    android:progressTint="#F9D555"
                    android:rating="5"
                    android:stepSize="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvContent" />

                <TextView
                    android:id="@+id/btnRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_27sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/custom_bg_btn_rate"
                    android:fontFamily="@font/nunito_medium"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/rate_us"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rtb" />

                <TextView
                    android:id="@+id/btnLater"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_27sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/nunito_medium"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/no_later"
                    android:textAlignment="center"
                    android:textColor="@color/color_201A25"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnRate" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loThanks"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/bg_dialog_rating"
        android:paddingBottom="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_rate_success"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/img_rate_success"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_thank_you_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/thank_you"
            android:textColor="@color/color_201A25"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_rate_success" />

        <TextView
            android:id="@+id/tv_thank_you"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/your_feedback_is_very"
            android:textAlignment="center"
            android:textColor="@color/color_7C7C7C"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_thank_you_title" />

        <TextView
            android:id="@+id/cv_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:background="@drawable/custom_bg_btn_rate"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@id/tv_thank_you" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
