<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".screens.intro.NTDViewIntroActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/layoutContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/custom_bg_intro"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/layoutContainer">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/title_intro_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textFontWeight="656"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/nunito_medium"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/content_intro_1"
            android:textAlignment="center"
            android:textColor="#D6D6D6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

        <ImageView
            android:id="@+id/ivDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_dot_1"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvContent"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/next"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColor="@color/text_primary"
            android:textFontWeight="790"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ivDot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivDot" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
